# cSnake

./: AUTHORS  Makefile  Makefile.in  README  README.md  configure.ac
include/: cSnake.h
src/: Makefile.am  cSnake.c  main.c
